cif/org.eclipse.escet.cif.tests/tests/checks/TypeListSizeLimitsCheckList5to10.cif.check.err
WARNING: File "checks/TypeListSizeLimitsCheckList5to10.cif": Semantic warning at line 56, column 14: Event "X.voidChannel" is not used anywhere in the specification.
WARNING: File "checks/TypeListSizeLimitsCheckList5to10.cif": Semantic warning at line 57, column 27: Event "X.longArrayChannel" is not used anywhere in the specification.
WARNING: File "checks/TypeListSizeLimitsCheckList5to10.cif": Semantic warning at line 58, column 26: Event "X.longListChannel" is not used anywhere in the specification.
WARNING: File "checks/TypeListSizeLimitsCheckList5to10.cif": Semantic warning at line 70, column 24: Variable "someFunc.va" is not used anywhere in the specification.
WARNING: File "checks/TypeListSizeLimitsCheckList5to10.cif": Semantic warning at line 71, column 21: Variable "someFunc.pv" is not used anywhere in the specification.
WARNING: File "checks/TypeListSizeLimitsCheckList5to10.cif": Semantic warning at line 72, column 7: Variable "someFunc.vc" is not used anywhere in the specification.
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  ----------------------------------------------------------------------------------------
  (1/10) List type of channel "X.longListChannel" allows lists with more than 10 elements.
  ----------------------------------------------------------------------------------------
   * In type declaration "typeUsedLongList":
     - type typeUsedLongList = list[15..17] int;
                               ^

  -----------------------------------------------------------------------------------------------
  (2/10) List type of discrete variable "X.badMatrixList" allows lists with less than 5 elements.
  -----------------------------------------------------------------------------------------------
   * In type declaration "typeBadMatrixList":
     - type typeBadMatrixList = list[3..19] typeGoodSubList;
                                ^

  ------------------------------------------------------------------------------------------------
  (3/10) List type of discrete variable "X.badMatrixList" allows lists with more than 10 elements.
  ------------------------------------------------------------------------------------------------
   * In type declaration "typeBadMatrixList":
     - type typeBadMatrixList = list[3..19] typeGoodSubList;
                                ^

  ---------------------------------------------------------------------------------------------------
  (4/10) List type of discrete variable "X.badMatrixSubList" allows lists with more than 10 elements.
  ---------------------------------------------------------------------------------------------------
   * In type declaration "typeBadSubList":
     - type typeBadSubList = list[17..18] int;
                             ^

  -----------------------------------------------------------------------------
  (5/10) List type of discrete variable allows lists with less than 5 elements.
  -----------------------------------------------------------------------------
   * In discrete variable "X.alwaysTooShortDiscList":
     - disc list[2..4] bool alwaysTooShortDiscList;
            ^
   * In discrete variable "X.possiblyTooShortDiscList":
     - disc list[2..5] bool possiblyTooShortDiscList;
            ^
   * In discrete variable "X.tooShortTooLongDiscList":
     - disc list[1..22] bool tooShortTooLongDiscList;
            ^

  ------------------------------------------------------------------------------
  (6/10) List type of discrete variable allows lists with more than 10 elements.
  ------------------------------------------------------------------------------
   * In discrete variable "X.alwaysTooLongDiscList":
     - disc list[11..22] bool alwaysTooLongDiscList;
            ^
   * In discrete variable "X.possiblyTooLongDiscList":
     - disc list[7..22] bool possiblyTooLongDiscList;
            ^
   * In discrete variable "X.tooShortTooLongDiscList":
     - disc list[1..22] bool tooShortTooLongDiscList;
            ^

  ---------------------------------------------------------------------------------------------
  (7/10) List type of function parameter "someFunc.pa" allows lists with more than 10 elements.
  ---------------------------------------------------------------------------------------------
   * In type declaration "typeBadSubList":
     - type typeBadSubList = list[17..18] int;
                             ^

  --------------------------------------------------------------------------------------------
  (8/10) List type of function return type "someFunc" allows lists with more than 10 elements.
  --------------------------------------------------------------------------------------------
   * In type declaration "typeBadSubList":
     - type typeBadSubList = list[17..18] int;
                             ^

  --------------------------------------------------------------------------------------------
  (9/10) List type of function variable "someFunc.va" allows lists with more than 10 elements.
  --------------------------------------------------------------------------------------------
   * In type declaration "typeBadSubList":
     - type typeBadSubList = list[17..18] int;
                             ^

  -----------------------------------------------------------------------------------------
  (10/10) List type of input variable "X.declList" allows lists with more than 10 elements.
  -----------------------------------------------------------------------------------------
   * In type declaration "typeUsedLongList":
     - type typeUsedLongList = list[15..17] int;
                               ^
